# playground

IO/basic/: CMakeLists.txt
IO/basic/src/: main.cpp
c++_basics_review/sorting/: CMakeLists.txt
c++_basics_review/sorting/src/: main.cpp
c++_constructs/placement_new/: CMakeLists.txt
c++_constructs/placement_new/src/: main.cpp
c++_constructs/variadic_template/: CMakeLists.txt
c++_constructs/variadic_template/src/: main.cpp
interprocess_communication_experiments/pipes/: CMakeLists.txt
interprocess_communication_experiments/pipes/src/: main.cpp
interprocess_communication_experiments/shm/: CMakeLists.txt
interprocess_communication_experiments/shm/include/: shm_funcs.hpp
interprocess_communication_experiments/shm/src/: reader.cpp  writer.cpp
intrinsics/basic_add/: CMakeLists.txt
intrinsics/basic_add/src/: main.cpp
memory_experiments/mmap_brk/: CMakeLists.txt
memory_experiments/mmap_brk/src/: main.cpp
memory_experiments/shm/src/: main.cpp
send/: CMakeLists.txt
send/src/: main.cpp
threading/mutex_test/: CMakeLists.txt
threading/mutex_test/src/: main.cpp
threading/threaded_memset/: CMakeLists.txt
threading/threaded_memset/src/: main.cpp
vtable/: CMakeLists.txt
vtable/src/: vtable.cpp
